# neovim-ctrl

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: publish.yml  test.yml
ci/: gitlab-ci.yml
src/: main.rs
