[package]
name = "neovim-ctrl"
version = "0.2.1"
edition = "2021"
rust-version = "1.74"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/neovim-ctrl"
repository = "https://github.com/d-e-s-o/neovim-ctrl.git"
readme = "README.md"
categories = [
  "command-line-utilities",
  "text-editors",
  "development-tools",
  "os::unix-apis",
]
keywords = ["neovim", "tmux", "linux", "proc", "procfs"]
description = """
A program to find and interact with a Neovim instance running in a
particular terminal.
"""

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[[bin]]
name = "nvim-ctrl"
path = "src/main.rs"

[dependencies.libc]
version = "0.2"

[dependencies.neovim-lib]
version = "0.6"

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"
